--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,8 +3,11 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/alegreya_sc_bold</item>
         <item>@font/cagliostro</item>
+        <item>@font/cantarell_bold</item>
         <item>@font/chewy</item>
         <item>@font/pacifico</item>
         <item>@font/prompt_medium</item>
+        <item>@font/ramabhadra</item>
+        <item>@font/ramaraja</item>
     </array>
 </resources>
