--- a/app/src/main/res/drawable/congradientbackground.xml
+++ b/app/src/main/res/drawable/congradientbackground.xml
@@ -3,5 +3,6 @@
     <gradient
         android:angle="90"
         android:startColor="#00ffea"
-        android:endColor="#07a8d9" />
+        android:endColor="#00ffea"
+        android:centerColor="#07a8d9"/>
 </shape>
