--- a/app/src/main/res/layout/activity_developer.xml
+++ b/app/src/main/res/layout/activity_developer.xml
@@ -12,143 +12,117 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/ramabhadra"
+            android:paddingStart="15dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:text="Aca-droid Library"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:layout_gravity="center"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#9C9999"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Our Team"
+            android:fontFamily="@font/ramabhadra"
+            android:textSize="20sp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginTop="20dp"
+            android:textStyle="bold"
+            android:gravity="center"/>
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginTop="20dp">
 
-            <LinearLayout
+            <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="380dp"
-                android:orientation="vertical"
-                android:layout_margin="40dp"
-                android:background="@drawable/aboutus_border">
+                android:layout_height="350dp"
+                android:src="@drawable/satyam"
+                android:scaleType="fitXY"/>
 
-                <ImageView
-                    android:layout_width="250dp"
-                    android:layout_height="280dp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="-15dp"
-                    android:src="@drawable/satyam"
-                    android:scaleType="fitXY"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Satyam Tiwari"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="5dp"
-                    android:textSize="18sp"
-                    android:fontFamily="@font/pacifico"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Java Developer"
-                    android:layout_gravity="center"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    android:fontFamily="serif-monospace"/>
-
-                <LinearLayout
-                    android:layout_marginTop="5dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_gravity="center"
-                    android:gravity="center">
-
-                    <ImageView
-                        android:id="@+id/satyamFB"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:src="@drawable/facebook" />
-
-                    <ImageView
-                        android:id="@+id/satyamTW"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:src="@drawable/twitter"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginEnd="5dp"/>
-
-                    <ImageView
-                        android:id="@+id/satyamIG"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:src="@drawable/instagram"/>
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="380dp"
-                android:orientation="vertical"
-                android:layout_margin="40dp"
-                android:background="@drawable/aboutus_border">
+                android:layout_height="wrap_content"
+                android:text="Satyam Tiwari"
+                android:gravity="center"
+                android:layout_marginTop="4dp"
+                android:textSize="22sp"
+                android:fontFamily="@font/cantarell_bold"/>
 
-                <ImageView
-                    android:layout_width="250dp"
-                    android:layout_height="280dp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="-15dp"
-                    android:src="@drawable/zaheer"
-                    android:scaleType="fitXY"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Java Developer"
+                android:gravity="center"
+                android:textSize="17sp"
+                android:fontFamily="@font/cantarell_bold"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Zaheer Ansari"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="5dp"
-                    android:textSize="18sp"
-                    android:fontFamily="@font/pacifico"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/satyam"
+                android:gravity="center"
+                android:textSize="17sp"
+                android:fontFamily="@font/cantarell_bold"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Java Developer"
-                    android:layout_gravity="center"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    android:fontFamily="serif-monospace"/>
+        </LinearLayout>
 
-                <LinearLayout
-                    android:layout_marginTop="5dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_gravity="center"
-                    android:gravity="center">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginTop="50dp">
 
-                    <ImageView
-                        android:id="@+id/zaheerFB"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:src="@drawable/facebook"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="350dp"
+                android:src="@drawable/zaheer"
+                android:scaleType="fitXY"/>
 
-                    <ImageView
-                        android:id="@+id/zaheerTW"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:src="@drawable/twitter"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginEnd="5dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Zaheer Ahmed Ansari"
+                android:gravity="center"
+                android:layout_marginTop="4dp"
+                android:textSize="22sp"
+                android:fontFamily="@font/cantarell_bold"/>
 
-                    <ImageView
-                        android:id="@+id/zaheerIG"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:src="@drawable/instagram"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Java Developer / UI/UX Developer"
+                android:gravity="center"
+                android:textSize="17sp"
+                android:fontFamily="@font/cantarell_bold"/>
 
-                </LinearLayout>
-
-            </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/zaheer"
+                android:gravity="center"
+                android:textSize="17sp"
+                android:fontFamily="@font/cantarell_bold"
+                android:layout_marginBottom="10dp"/>
 
         </LinearLayout>
 
     </LinearLayout>
-
 </ScrollView>
