--- a/app/src/main/res/layout/activity_teacher_main.xml
+++ b/app/src/main/res/layout/activity_teacher_main.xml
@@ -10,7 +10,6 @@
     android:background="@drawable/main_visiblity"
     android:fitsSystemWindows="true">
 
-
     <RelativeLayout
         android:id="@+id/homeTeacher"
         android:layout_width="match_parent"
@@ -198,12 +197,14 @@
                                     android:layout_width="393dp"
                                     android:layout_height="140dp"
                                     app:cardCornerRadius="5dp"
+                                    android:onClick="navigateToFeedbackPage"
                                     app:cardBackgroundColor="#475353">
                                     <ImageView
                                         android:layout_width="60dp"
                                         android:layout_height="60dp"
                                         android:src="@drawable/feedback"
-                                        android:layout_gravity="center">
+                                        android:layout_gravity="center"
+                                        android:onClick="navigateToFeedbackPage">
                                     </ImageView>
                                 </androidx.cardview.widget.CardView>
                             </LinearLayout>
