--- a/app/src/main/res/layout/activity_teacher_own_profile.xml
+++ b/app/src/main/res/layout/activity_teacher_own_profile.xml
@@ -180,6 +180,45 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Phone"
+                android:textColor="@color/white"
+                android:textSize="19sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/teacher_profilePage_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="+91 9876543210"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
+                android:textSize="18sp" />
+
+            <RelativeLayout
+                android:layout_width="210dp"
+                android:layout_height="4dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:background="@color/grey"
+                android:gravity="center">
+
+            </RelativeLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="35dp"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Qualification"
                 android:textColor="@color/white"
                 android:textSize="19sp"
