--- a/app/src/main/res/layout/activity_teacher_settings.xml
+++ b/app/src/main/res/layout/activity_teacher_settings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
@@ -24,10 +25,10 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/backarrowSetting"
+                android:id="@+id/backTeacherarrowSetting"
                 android:layout_width="60dp"
                 android:layout_height="25dp"
-                android:layout_alignStart="@+id/setting_profile_name"
+                android:layout_alignStart="@+id/settingTeacher_profile_name"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="-20dp"
                 android:layout_marginTop="47dp"
@@ -37,18 +38,18 @@
                 android:id="@+id/hello"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/setting_profile_name"
-                android:layout_alignEnd="@+id/setting_profile_name"
+                android:layout_alignStart="@+id/settingTeacher_profile_name"
+                android:layout_alignEnd="@+id/settingTeacher_profile_name"
                 android:layout_marginStart="-17dp"
                 android:layout_marginTop="15dp"
-                android:layout_below="@id/backarrowSetting"
+                android:layout_below="@id/backTeacherarrowSetting"
                 android:layout_marginBottom="8dp"
                 android:fontFamily="@font/pacifico"
                 android:text="Update Your Identity!"
                 android:textSize="35sp" />
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/setting_profile_image"
+                android:id="@+id/settingTeacher_profile_image"
                 android:layout_width="140dp"
                 android:layout_height="140dp"
                 android:layout_below="@id/hello"
@@ -60,7 +61,7 @@
                 android:src="@drawable/default_avatar" />
 
             <EditText
-                android:id="@+id/setting_profile_name"
+                android:id="@+id/settingTeacher_profile_name"
                 android:layout_width="wrap_content"
                 android:layout_height="43dp"
                 android:layout_alignParentStart="true"
@@ -70,7 +71,7 @@
                 android:layout_marginEnd="42dp"
                 android:background="@drawable/customize_inputs"
                 android:ems="15"
-                android:layout_below="@id/setting_profile_image"
+                android:layout_below="@id/settingTeacher_profile_image"
                 android:hint="Ful-name"
                 android:inputType="textPersonName"
                 android:labelFor="@id/login_user_name"
@@ -78,10 +79,10 @@
                 android:textColorHint="@color/grey" />
 
             <EditText
-                android:id="@+id/setting_profile_contact"
+                android:id="@+id/settingTeacher_profile_contact"
                 android:layout_width="wrap_content"
                 android:layout_height="43dp"
-                android:layout_below="@+id/setting_profile_name"
+                android:layout_below="@+id/settingTeacher_profile_name"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="45dp"
@@ -95,10 +96,10 @@
                 android:textColorHint="@color/grey" />
 
             <EditText
-                android:id="@+id/setting_profile_rollno"
+                android:id="@+id/settingTeacher_profile_rollno"
                 android:layout_width="wrap_content"
                 android:layout_height="43dp"
-                android:layout_below="@+id/setting_profile_contact"
+                android:layout_below="@+id/settingTeacher_profile_contact"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="45dp"
@@ -106,13 +107,13 @@
                 android:layout_marginEnd="45dp"
                 android:background="@drawable/customize_inputs"
                 android:ems="15"
-                android:hint="Roll No."
-                android:inputType="number"
+                android:hint="Qualification"
+                android:inputType="text"
                 android:textColor="@color/black"
                 android:textColorHint="@color/grey" />
 
             <EditText
-                android:id="@+id/setting_profile_email"
+                android:id="@+id/settingTeacher_profile_email"
                 android:layout_width="wrap_content"
                 android:layout_height="43dp"
                 android:layout_alignParentStart="true"
@@ -120,7 +121,7 @@
                 android:layout_marginStart="46dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="42dp"
-                android:layout_below="@+id/setting_profile_rollno"
+                android:layout_below="@+id/settingTeacher_profile_rollno"
                 android:background="@drawable/customize_inputs"
                 android:ems="15"
                 android:hint="Email Address"
@@ -129,34 +130,19 @@
                 android:textColor="@color/black"
                 android:textColorHint="@color/grey" />
 
-            <EditText
-                android:id="@+id/setting_profile_uid"
-                android:layout_width="wrap_content"
-                android:layout_height="43dp"
-                android:layout_below="@+id/setting_profile_email"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginStart="45dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="45dp"
-                android:background="@drawable/customize_inputs"
-                android:ems="15"
-                android:hint="Unique ID"
-                android:inputType="number"
-                android:textColor="@color/black"
-                android:textColorHint="@color/grey" />
-
             <Button
-                android:id="@+id/setting_update_profilebtn"
+                android:id="@+id/settingTeacher_update_profilebtn"
                 android:layout_width="wrap_content"
                 android:layout_height="42dp"
-                android:layout_below="@id/setting_profile_uid"
+                android:layout_below="@id/settingTeacher_profile_email"
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="55dp"
                 android:layout_marginTop="40dp"
                 android:background="@drawable/custumbuttons"
                 android:gravity="center"
-                android:text="Update"
+                android:text="U p d a t e"
+                android:paddingStart="15dp"
+                android:paddingEnd="15dp"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
         </RelativeLayout>
