--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="orange">#ff563f</color>
+    <color name="green">#84bd26</color>
     <color name="fb_blue">#475993</color>
     <color name="edit_text_hint">#999999</color>
     <color name="edit_text_txt">#999999</color>
