--- a/app/src/main/res/layout/activity_teacher_settings.xml
+++ b/app/src/main/res/layout/activity_teacher_settings.xml
@@ -78,7 +78,7 @@
                 android:textColor="@color/black"
                 android:textColorHint="@color/grey" />
 
-            <EditText
+            <!--<EditText
                 android:id="@+id/settingTeacher_profile_contact"
                 android:layout_width="wrap_content"
                 android:layout_height="43dp"
@@ -93,13 +93,13 @@
                 android:hint="Contact No."
                 android:inputType="phone"
                 android:textColor="@color/black"
-                android:textColorHint="@color/grey" />
+                android:textColorHint="@color/grey" />-->
 
             <EditText
                 android:id="@+id/settingTeacher_profile_rollno"
                 android:layout_width="wrap_content"
                 android:layout_height="43dp"
-                android:layout_below="@+id/settingTeacher_profile_contact"
+                android:layout_below="@+id/settingTeacher_profile_name"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="45dp"
