--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,15 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="SolidButtonPhoneVerifiedStyle" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/solid_bg</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:fontFamily">@font/sf_pro_display_semibold</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
     <style name="StrokeButtonStyle" parent="SolidButtonStyle">
         <item name="android:background">@drawable/stroke_bg</item>
         <item name="android:textColor">@color/orange</item>
